# palimpsest

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md  elide-dev.yaml
.claude/agents/: elide-docs-expert.md
.github/workflows/: ci-kernel.yml  ci.yml
docs/: actor-offload-plan.md  architecture.md  coordinator-driven-snapshot-plan.md  coordinator-mint-enrollment-plan.md  design-auth-model.md  design-consistency-surface.md  design-delta-compression.md  design-delta-materialisation.md  design-deployment-modes.md  design-domain-store.md  design-elide-mint.md  design-extent-reclamation.md  design-gc-bucket-unification.md  design-gc-overlap-correctness.md  design-gc-partial-death-compaction.md  design-gc-self-describing-handoff.md  design-gc-ulid-ordering.md  design-iam-key-model.md  design-lbamap-claimant-tracking.md  design-manifest-toml-removal.md  design-mint.md  design-name-event-log.md  design-noop-write-skip.md  design-oci-export.md  design-peer-segment-fetch.md  design-pending-compaction-unification.md  design-portable-live-volume.md  design-replica-model.md  design-segment-index.md  design-tigris-native.md  design-ublk-shutdown-park.md  design-ublk-transport.md  design-volume-event-log.md  design-volume-fetch.md  design-volume-size-ownership.md  finding-cargo-build-stale-read.md  finding-sweep-flush-claimant-bug.md  fork-from-remote-plan.md  formats.md  integrations.md  (+18 more)
docs/notes/: INDEX.md  actor-offload-plan.md  coordinator-driven-snapshot-plan.md  design-async-runtime-scope.md  design-consistency-surface.md  design-credential-macaroons.md  design-dedup-delta-invariants.md  design-delta-compression.md  design-delta-materialisation.md  design-extent-reclamation.md  design-force-release-fencing.md  design-gc-overlap-correctness.md  design-gc-plan-handoff.md  design-gc-self-describing-handoff.md  design-gc-ulid-ordering.md  design-isolation-model.md  design-noop-write-skip.md  design-operator-tokens.md  design-portable-live-volume.md  (+20 more)
elide-coordinator/: Cargo.toml
elide-coordinator/src/: bins.rs  bucket_position.rs  claim.rs  config.rs  control.rs  credential.rs  daemon.rs  eligibility.rs  enroll.rs  event_journal.rs  fetch.rs  fork.rs  gc.rs  gc_cycle.rs  iam.rs  identity.rs  import.rs  inbound.rs  ipc.rs  key_shadow.rs  lib.rs  lifecycle.rs  local_cond_store.rs  log_init.rs  log_relay.rs  macaroon.rs  main.rs  mint_client.rs  mint_stores.rs  name_claims.rs  name_event_store.rs  name_store.rs  park.rs  peer_discovery.rs  pending_delete.rs  pidfile.rs  portable.rs  prefetch.rs  pull.rs  range_fetcher.rs  (+17 more)
elide-coordinator/src/inbound/: lifecycle.rs  mod.rs
elide-coordinator/tests/: delta_test.rs  gc_proptest.proptest-regressions  gc_proptest.rs  gc_test.rs  pending_delete_proptest.rs  portable_proptest.rs  segment_head_proptest.proptest-regressions  segment_head_proptest.rs
elide-core/: Cargo.toml
elide-core/benches/: blake3_hash_lookup.rs  extent_index_clone.rs  write_throughput.rs
elide-core/proptest-regressions/: volume.txt
elide-core/src/: actor.rs  blake3_id_hasher.rs  block_reader.rs  config.rs  delta_compute.rs  dmat.rs  ext4_scan.rs  extentindex.rs  filemap.rs  gc.rs  gc_apply.rs  gc_plan.rs  import.rs  ipc.rs  lbamap.rs  lib.rs  name_event.rs  name_record.rs  rewrite_apply.rs  rewrite_plan.rs  segment.rs  segment_cache.rs  segment_classify.rs  signing.rs  ulid_mint.rs  volume.rs  volume_event.rs  volume_ipc.rs  writelog.rs
elide-core/src/volume/: ancestry.rs  compress.rs  fork.rs  jobs.rs  mod.rs  open_state.rs  read.rs  readonly.rs  reclaim.rs  redact.rs  repack.rs  tests.rs  wal.rs
elide-core/tests/: actor_proptest.proptest-regressions  actor_proptest.rs  concurrent_test.rs  delta_compute_test.rs  delta_promote_evict_test.rs  delta_read_test.rs  dmat_proptest.proptest-regressions  dmat_proptest.rs  evict_test.rs  flush_promote_test.rs  fork_proptest.proptest-regressions  fork_proptest.rs  fork_test.rs  gc_index_test.rs  gc_ordering_test.rs  gc_plan_apply_test.rs  import_file_aware.rs  readonly_volume_test.rs  reclaim_crash_recovery_repro.rs  reclaim_delta_test.rs  redact_then_dedup_rebuild_repro.rs  repack_half_promote_repro.rs  rewrite_plan_apply_test.rs  snapshot_dead_segment_filter_test.rs  volume_proptest.proptest-regressions  volume_proptest.rs  volume_reproducers.rs
elide-core/tests/common/: actor_drain.rs  mod.rs
elide-fetch/: Cargo.toml
elide-fetch/src/: full_warm.rs  lib.rs
elide-import/: Cargo.toml
elide-import/src/: filemap.rs  main.rs
elide-peer-fetch/: Cargo.toml
elide-peer-fetch/src/: ancestry.rs  auth.rs  body_token.rs  client.rs  endpoint.rs  hint.rs  lib.rs  range_fetcher.rs  server.rs  token.rs  volume_signer.rs
elide-peer-fetch/tests/: two_coordinator.rs
elide-signing/: Cargo.toml
elide-signing/src/: lib.rs
elide-tigris-iam/: Cargo.toml
elide-tigris-iam/src/: client.rs  error.rs  lib.rs  policy.rs
mint/: Cargo.toml  README.md
mint/examples/: demo.toml  mint-demo.toml  mint-elide.toml  mint.toml
mint/examples/demo_roles/: read.json  write.json
mint/examples/elide_roles/: coord-base.json  coord-writer.json
mint/examples/mint_roles/: coord-data.json  volume-ro.json
mint/src/: audit.rs  caveat.rs  client.rs  config.rs  http.rs  iam.rs  issuance.rs  lib.rs  macaroon.rs  main.rs  pop.rs  role.rs  state.rs  template.rs  tigris.rs
mint/tests/: assume_role.rs  enroll.rs  tigris_minter.rs  transport.rs
mint/tests/common/: mod.rs
scripts/: elide-vm
specs/: .gitignore  GCCheckpointOrdering.cfg  GCCheckpointOrdering.tla  HandoffProtocol.cfg  HandoffProtocol.tla  HandoffProtocol_Tombstone.cfg
src/: body_prefetch.rs  control.rs  coordinator_client.rs  creds_fetcher.rs  delta.rs  extentindex.rs  extents.rs  fetch_volume.rs  fetcher.rs  full_warm.rs  inspect.rs  inspect_files.rs  lbamap.rs  lib.rs  ls.rs  main.rs  manifest.rs  nbd.rs  operator_token.rs  segment.rs  serve.rs  signing.rs  similar.rs  tui.rs  ublk.rs  verify.rs  volume.rs  volume_io.rs  volume_open.rs  volume_up.rs  writelog.rs
tests/: coordinator_nbd.rs  coordinator_ublk.rs  ublk_crash.rs
