[workspace]
members = [".", "elide-core", "elide-fetch", "elide-import", "elide-coordinator"]
resolver = "2"

[package]
name = "elide"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
blake3             = "1"
tracing            = "0.1"
tracing-log        = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono         = { version = "0.4", default-features = false, features = ["clock"] }
clap           = { version = "4", features = ["derive", "env"] }
ctrlc          = "3"
elide-core        = { path = "elide-core" }
elide-coordinator = { path = "elide-coordinator" }
elide-fetch       = { path = "elide-fetch" }
ext4-view      = { version = "0.9", features = ["std"] }
libc           = "0.2"
lz4_flex       = "0.11"
futures        = "0.3"
object_store   = { version = "0.11", features = ["aws"] }
# Pulled in transitively via rust-s3 (elide-fetch) and object_store (coordinator).
# Declared directly here so we can call `CryptoProvider::install_default` at
# startup — rustls 0.23 requires this when feature-flag auto-detection fails,
# which it does for our dependency shape.
rustls         = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
serde          = { version = "1", features = ["derive"] }
tokio          = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
toml           = { version = "0.8", default-features = false, features = ["parse", "display"] }
ulid           = "1"
zstd           = "0.13"

[dev-dependencies]
tempfile = "3"
