[workspace]
members = [".", "elide-core", "elide-fetch", "elide-import", "elide-coordinator"]
resolver = "2"

[package]
name = "elide"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
blake3             = "1"
tracing            = "0.1"
tracing-log        = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono         = { version = "0.4", default-features = false, features = ["clock"] }
clap           = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5"
ctrlc          = { version = "3", features = ["termination"] }
elide-core        = { path = "elide-core" }
elide-coordinator = { path = "elide-coordinator" }
elide-fetch       = { path = "elide-fetch" }
ext4-view      = { version = "0.9", features = ["std"] }
libc           = "0.2"
lz4_flex       = "0.11"
futures        = "0.3"
object_store   = { version = "0.11", features = ["aws"] }
# Pulled in transitively via rust-s3 (elide-fetch) and object_store (coordinator).
# Declared directly here so we can call `CryptoProvider::install_default` at
# startup — rustls 0.23 requires this when feature-flag auto-detection fails,
# which it does for our dependency shape.
rustls         = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
serde          = { version = "1", features = ["derive"] }
tokio          = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
toml           = { version = "0.8", default-features = false, features = ["parse", "display"] }
ulid           = "1"
zstd           = "0.13"

[dev-dependencies]
tempfile = "3"

# ublk transport support (Linux only).
#
# The `ublk` cargo feature toggles inclusion of the libublk crate. On non-Linux
# targets the crate is not in the dependency graph (target-gated below), and
# src/ublk.rs compiles to a stub that errors if the transport is requested.
# Default is off while the spike lands; we will flip to default-on for Linux
# once the integration is exercised.
[features]
default = []
ublk = ["dep:libublk", "dep:io-uring", "dep:smol"]
# Workspace aggregate for property-based test suites. Enables `proptest`
# on every member crate that has one, so CI can run them all via a single
# `cargo test --workspace --features proptest --tests` invocation.
proptest = ["elide-core/proptest", "elide-coordinator/proptest"]

[target.'cfg(target_os = "linux")'.dependencies]
libublk  = { version = "0.4", optional = true }
# Transitive via libublk; declared directly so the SIGINT/SIGTERM handler
# thread can initialize its own thread-local ublk control ring (required by
# `ublk_init_ctrl_task_ring`) before calling `kill_dev`, and so the ublk
# transport can build POLL_ADD SQEs that bridge worker-thread completions
# onto the queue's own uring (step 2b).
io-uring = { version = "0.7", optional = true }
# libublk depends on smol = "2.0.2" directly — we match that runtime to
# drive per-queue `LocalExecutor`s for async per-tag I/O dispatch.
smol     = { version = "2", optional = true }
