[package]
name = "elide-coordinator"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow             = "1"
blake3             = "1"
tracing            = "0.1"
tracing-log        = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes        = "1"
chrono       = { version = "0.4", default-features = false, features = ["clock"] }
clap         = { version = "4", features = ["derive"] }
elide-core   = { path = "../elide-core" }
futures      = "0.3"
nix          = { version = "0.29", features = ["process", "signal"] }
object_store = { version = "0.11", features = ["aws"] }
serde        = { version = "1", features = ["derive"] }
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "signal", "process"] }
toml         = { version = "0.8", default-features = false, features = ["parse"] }
ulid         = "1"

[dev-dependencies]
blake3   = "1"
tempfile = "3"
