[package]
name = "elide-coordinator"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow             = "1"
async-trait        = "0.1"
blake3             = "1"
ed25519-dalek      = { version = "2", features = ["rand_core"] }
tracing            = "0.1"
tracing-log        = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes        = "1"
chrono       = { version = "0.4", default-features = false, features = ["clock"] }
clap         = { version = "4", features = ["derive"] }
elide-core   = { path = "../elide-core" }
lz4_flex     = "0.11"
elide-fetch  = { path = "../elide-fetch" }
futures      = "0.3"
humantime-serde = "1"
nix          = { version = "0.31", features = ["process", "signal", "user"] }
rand_core    = { version = "0.6", features = ["getrandom"] }
object_store = { version = "0.11", features = ["aws"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "signal", "process", "net", "io-util"] }
toml         = { version = "0.8", default-features = false, features = ["parse", "display"] }
ulid         = "1"
zstd         = "0.13"

# libublk is Linux-only; the sweep uses it directly to delete orphan
# kernel devices without spawning the elide binary as a subprocess. On
# non-Linux targets the sweep compiles to a stub that does nothing
# (sysfs path doesn't exist, no devices to reconcile).
[target.'cfg(target_os = "linux")'.dependencies]
libublk = "0.4"

[features]
# Gate the slow property-based test suites behind an explicit feature so that
# `cargo test -p elide-coordinator` runs only the fast unit/integration tests.
#
#   cargo test -p elide-coordinator --features proptest
proptest = []

[dev-dependencies]
async-trait = "0.1"
blake3      = "1"
proptest    = "1"
tempfile    = "3"

[[test]]
name = "gc_proptest"
required-features = ["proptest"]

[[test]]
name = "retention_marker_proptest"
required-features = ["proptest"]
