[package]
name = "elide-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
arc-swap       = "1"
bitflags       = "2"
blake3         = "1"
chrono         = { version = "0.4", default-features = false, features = ["clock", "serde"] }
crossbeam-channel = "0.5"
ext4-view      = { version = "0.9", features = ["std"] }
log            = "0.4"
lru            = "0.17"
ed25519-dalek  = { version = "2", features = ["rand_core"] }
lz4_flex       = "0.11"
nix            = { version = "0.31", features = ["fs", "hostname", "process", "signal"] }
rand_core      = { version = "0.6", features = ["getrandom"] }
serde          = { version = "1", features = ["derive"] }
toml           = { version = "0.8", default-features = false, features = ["parse", "display"] }
ulid           = { version = "1", features = ["serde"] }
zerocopy       = { version = "0.8", features = ["derive"] }
zstd           = "0.13"

[features]
# Gate the slow property-based test suites behind an explicit feature so that
# `cargo test -p elide-core` runs only the fast unit/integration tests.
#
# Run all proptest suites:
#   cargo test -p elide-core --features proptest
# Run a single suite (via test-binary filter):
#   cargo test -p elide-core --features proptest --test volume_proptest
proptest = []

[dev-dependencies]
criterion  = { version = "0.5", features = ["html_reports"] }
proptest   = "1"
tempfile   = "3"
zstd       = "0.13"

[[test]]
name = "actor_proptest"
required-features = ["proptest"]

[[test]]
name = "fork_proptest"
required-features = ["proptest"]

[[test]]
name = "volume_proptest"
required-features = ["proptest"]

[[bench]]
name = "compression"
harness = false
