[package]
name = "elide-import"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
elide-core    = { path = "../elide-core" }
elide-signing = { path = "../elide-signing" }
oci-client = "0.16"
oci-spec   = { version = "0.9", features = ["image"] }
ocirender  = "0.2"
serde      = { version = "1", features = ["derive"] }
tempfile   = "3"
toml       = { version = "0.8", default-features = false, features = ["display"] }
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
