[package]
name = "elide-signing"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
ed25519-dalek  = { version = "2", features = ["rand_core"] }
elide-core     = { path = "../elide-core" }
libc           = "0.2"
rand_core      = { version = "0.6", features = ["getrandom"] }
