[package]
name = "elide-tigris-iam"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Tigris IAM client and per-volume policy templates for elide."

[dependencies]
aws-credential-types = "1"
aws-sigv4            = { version = "1", default-features = false, features = ["sign-http", "http1"] }
http                 = "1"
quick-xml            = { version = "0.38" }
reqwest              = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"] }
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
thiserror            = "1"
tokio                = { version = "1", features = ["macros"] }
tracing              = "0.1"
ulid                 = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
