# mint is its own workspace, independent of the elide workspace above
# it. It is Standalone-OSS-to-be; this nested workspace makes a future
# git extraction a pure directory move with no Cargo changes. Build,
# test, and lint it from this directory (`cd mint && cargo …`).
[workspace]
resolver = "2"

[package]
name = "mint"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Macaroon-authenticated scoped-credential vending for Tigris (prototype). Standalone-OSS-to-be; lives in the elide repo during the design phase."

[dependencies]
async-trait          = "0.1"
aws-credential-types = "1"
aws-sigv4            = { version = "1", default-features = false, features = ["sign-http", "http1"] }
axum                 = "0.8"
base64               = "0.22"
blake3               = "1"
bytes                = "1"
chrono               = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap                 = { version = "4", features = ["derive"] }
ed25519-dalek        = "2"
handlebars           = "6"
http                 = "1"
http-body-util       = "0.1"
hyper                = { version = "1", features = ["client", "http1"] }
hyper-util           = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
hyperlocal           = { version = "0.9", default-features = false, features = ["client"] }
quick-xml            = "0.38"
rand_core            = { version = "0.6", features = ["getrandom"] }
reqwest              = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"] }
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
subtle               = "2"
thiserror            = "1"
tokio                = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
toml                 = { version = "0.8", default-features = false, features = ["parse"] }
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
uuid                 = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
tower = { version = "0.5", features = ["util"] }
